--- a/src/layout/basic.hbs
+++ b/src/layout/basic.hbs
@@ -3,7 +3,7 @@
 
 <head>
 	<title>
-		page person
+		{{page.title}}
 	</title>
 	<meta charset='utf-8' />
 	<link href='css/index.css' rel='stylesheet' />
