--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,36 +1,95 @@
-<div class="card">
-    <img card-img-top src="https://picsum.photos/200/100" alt="image photo">
-    <div class="card-body">
-        <h5 class="card-title">title</h5>
-        <p> content </p>
-        <a type="button" class="btn btn-primary" href="#">open</a>
+<main>
+    <div class="card">
+        <img card-img-top src="https://picsum.photos/200/100" alt="image photo">
+        <div class="card-body">
+            <h5 class="card-title">title</h5>
+            <p> content </p>
+            <a type="button" class="btn btn-primary" href="#">open</a>
+        </div>
     </div>
-</div>
-<br>
-<hr>
-<div class="card">
-    <div class="card-header">
-        Menu
-    </div>
+    <br>
+    <hr>
+    <div class="card">
+        <div class="card-header">
+            Menu
+        </div>
 
-    <ul class="list-group">
-        <li class="list-group-item">
-            <a type="button" class="btn btn-primary" href="/task31" alt="task31">
-                Task 3.1 page</a>
-        </li>
-        <li class="list-group-item">
-            <a type="button" class="btn btn-primary" href="/task21" alt="task21">
-                Task 2.1 page</a>
-        </li>
-        <li class="list-group-item">
-            <a type="button" class="btn btn-primary" href="/task22" alt="task22">
-                Task 2.2 page</a>
-        </li>
-    </ul>
+        <ul class="list-group">
+            <li class="list-group-item">
+                <a type="button" class="btn btn-primary" href="/task31" alt="task31">
+                    Task 3.1 page</a>
+            </li>
+            <li class="list-group-item">
+                <a type="button" class="btn btn-primary" href="/task21" alt="task21">
+                    Task 2.1 page</a>
+            </li>
+            <li class="list-group-item">
+                <a type="button" class="btn btn-primary" href="/task22" alt="task22">
+                    Task 2.2 page</a>
+            </li>
+        </ul>
 
-    <div class="card-footer">
-        footer:
-        <button class="btn btn-outline-primary btn-sm"> update list
-        </button>
+        <div class="card-footer">
+            footer:
+            <button class="btn btn-outline-primary btn-sm"> update list
+            </button>
+        </div>
     </div>
-</div>
+    <hr>
+    <h2 class="text=uppercase">Navs = navigation menu</h2>
+    <div class="row g-3">
+        <div class="col-12">
+            <h2>tab-menu</h2>
+            <div class="nav nav-tabs">
+                <div class="nav-item">
+                    <a href="#" alt="photo" class="nav-link active">active page</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" alt="photo" class="nav-link">product</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" alt="photo" class="nav-link disabled">shop trolley</a>
+                </div>
+            </div>
+        </div>
+        <h2>column menu</h2>
+        <div class="col-4">
+            <div class="card">
+                <div class="card-body">
+                    <div class="nav flex-column text-center">
+                        <div class="card">
+                            <div class="nav-item">
+                                <a href="#" alt="photo" class="nav-link">Home</a>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="card">
+                            <div class="nav-item">
+                                <a href="#" alt="photo" class="nav-link">Catalogue</a>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="card">
+                            <div class="nav-item">
+                                <a href="#" alt="photo" class="nav-link disabled">FAQ page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-8">
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a href="#" alt="photo">computers</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#" alt="photo">notebooks</a>
+                </li>
+                <li class="breadcrumb-item">
+                    MacBook
+                </li>
+            </ul>
+        </div>
+
+</main>
