--- a/src/layout/shop.hbs
+++ b/src/layout/shop.hbs
@@ -16,8 +16,7 @@
 <body>
 	{{{body}}}
 
-	<footer class="row p-4
-	">
+	<footer class="row p-4">
 		{{#each footer}}
 		<div class="col-2">
 			{{#each this}}
