--- a/src/container/shopcart.hbs
+++ b/src/container/shopcart.hbs
@@ -1,19 +1,5 @@
 <main>
-    <div class="card mt-5 mb-5">
-        {{#with navigation}}
-        <ul class="nav">
-            {{#each links}}
-            <li class="nav-item">
-                <a class="nav-link" href={{href}}>{{text}}</a>
-            </li>
-            {{/each}}
-            <li>
-                <a class="nav-link disabled">Disabled</a>
-            </li>
-        </ul>
-        {{/with}}
-    </div>
-    <hr>
+    {{>navShop}}
     {{#with header}}
     <h1>{{title}}</h1>
     {{#with button}}
