task 7.1 = add shopreview

--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -35,168 +35,176 @@
             </button>
         </div>
     </div>
-</div>
-<hr>
-<hr>
-<hr>
-
-<main class="p-5">
-    <h2 class="mb-5">bootstrap 5: field</h2>
-    <div class="row g-5">
-        <div class="col-12">
-            <label class="form-label"> Заголовок: your email </label>
-            <input class="form-control">
-            <div class="form-text text-danger">
-                correct your email
-            </div>
-        </div>
-        <div class="col-6">
-            <label class="form-label"> Заголовок: your email </label>
-            <input class="form-control">
-            <div class="form-text text-danger">
-                correct your email
-            </div>
-        </div>
-        <div class="col-6">
-            <label class="form-label"> Заголовок: your email </label>
-            <input class="form-control" disabled>
-            <div class="form-text text-danger">
-                correct your email
-            </div>
-        </div>
-        <div class="col-12">
-            <p class="text-primary">
-                як зробити fiels не в стовпчик, а в строку
-            </p>
-            <div class="row">
-                <div class="col-4">
-                    <label class="form-label mt-1"> Заголовок: your email </label>
-                </div>
-                <div class="col-5">
-                    <input class="form-control">
-                </div>
-                <div class="col-3">
-                    <div class="form-text text-danger mt-1">
-                        correct your email
-                    </div>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <div class="col-6">
-            <p class="text-primary">
-                випадаючий список
-            </p>
-            <label class="form-label mt-1"> choose your role: </label>
-            <select class="form-select">
-                <option value="1">admin</option>
-                <option value="2">user</option>
-                <option value="3">gest</option>
-            </select>
-            <div class="form-text text-danger mt-1">
-                correct your email
-            </div>
-
-        </div>
-
-        <hr>
-        <div class="col-6">
-            <label class="form-label text-primary">
-                multiple choice = checkbox
-            </label>
-            <div class="form-check">
-                <label class="form-check-label mt-1">book 1</label>
-                <input name="book" type="checkbox" class="form-check-input">
-            </div>
-            <div class="form-check">
-                <label class="form-check-label mt-1">book 2</label>
-                <input name="book" type="checkbox" class="form-check-input">
-            </div>
-            <div class="form-check">
-                <label class="form-check-label mt-1">book 3</label>
-                <input name="book" type="checkbox" class="form-check-input">
-            </div>
-        </div>
-
-        <div class="col-6">
-            <label class="form-label text-primary">
-                one option = radio
-            </label>
-            <div class="form-check">
-                <label class="form-check-label mt-1">book 1</label>
-                <input name="book" type="radio" class="form-check-input">
-            </div>
-            <div class="form-check">
-                <label class="form-check-label mt-1">book 2</label>
-                <input name="book" type="radio" class="form-check-input">
-            </div>
-            <div class="form-check">
-                <label class="form-check-label mt-1">book 3</label>
-                <input name="book" type="radio" class="form-check-input">
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="form-check form-switch">
-                <label class="form-check-label mt-1">get updates</label>
-                <input name="book" type="checkbox" class="form-check-input">
-            </div>
-        </div>
-    </div>
     </div>
     <hr>
-    <h2 class="text=uppercase">Navs = navigation menu</h2>
-    <div class="row g-3">
-        <div class="col-12">
-            <h2>tab-menu</h2>
-            <div class="nav nav-tabs">
-                <div class="nav-item">
-                    <a href="#" alt="photo" class="nav-link active">active page</a>
+    <hr>
+    <hr>
+
+    <main class="p-5">
+        <h2 class="mb-5">bootstrap 5: field</h2>
+        <div class="row g-5">
+            <div class="col-12">
+                <label class="form-label"> Заголовок: your email </label>
+                <input class="form-control">
+                <div class="form-text text-danger">
+                    correct your email
                 </div>
-                <div class="nav-item">
-                    <a href="#" alt="photo" class="nav-link">product</a>
+            </div>
+            <div class="col-6">
+                <label class="form-label"> Заголовок: your email </label>
+                <input class="form-control">
+                <div class="form-text text-danger">
+                    correct your email
                 </div>
-                <div class="nav-item">
-                    <a href="#" alt="photo" class="nav-link disabled">shop trolley</a>
+            </div>
+            <div class="col-6">
+                <label class="form-label"> Заголовок: your email </label>
+                <input class="form-control" disabled>
+                <div class="form-text text-danger">
+                    correct your email
+                </div>
+            </div>
+            <div class="col-12">
+                <p class="text-primary">
+                    як зробити fiels не в стовпчик, а в строку
+                </p>
+                <div class="row">
+                    <div class="col-4">
+                        <label class="form-label mt-1"> Заголовок: your email </label>
+                    </div>
+                    <div class="col-5">
+                        <input class="form-control">
+                    </div>
+                    <div class="col-3">
+                        <div class="form-text text-danger mt-1">
+                            correct your email
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="col-6">
+                <p class="text-primary">
+                    випадаючий список
+                </p>
+                <label class="form-label mt-1"> choose your role: </label>
+                <select class="form-select">
+                    <option value="1">admin</option>
+                    <option value="2">user</option>
+                    <option value="3">gest</option>
+                </select>
+                <div class="form-text text-danger mt-1">
+                    correct your email
+                </div>
+
+            </div>
+
+            <hr>
+            <div class="col-6">
+                <label class="form-label text-primary">
+                    multiple choice = checkbox
+                </label>
+                <div class="form-check">
+                    <label class="form-check-label mt-1">book 1</label>
+                    <input name="book" type="checkbox" class="form-check-input">
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label mt-1">book 2</label>
+                    <input name="book" type="checkbox" class="form-check-input">
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label mt-1">book 3</label>
+                    <input name="book" type="checkbox" class="form-check-input">
+                </div>
+            </div>
+
+            <div class="col-6">
+                <label class="form-label text-primary">
+                    one option = radio
+                </label>
+                <div class="form-check">
+                    <label class="form-check-label mt-1">book 1</label>
+                    <input name="book" type="radio" class="form-check-input">
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label mt-1">book 2</label>
+                    <input name="book" type="radio" class="form-check-input">
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label mt-1">book 3</label>
+                    <input name="book" type="radio" class="form-check-input">
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-check form-switch">
+                    <label class="form-check-label mt-1">get updates</label>
+                    <input name="book" type="checkbox" class="form-check-input">
                 </div>
             </div>
         </div>
-        <h2>column menu</h2>
-        <div class="col-4">
-            <div class="card">
-                <div class="card-body">
-                    <div class="nav flex-column text-center">
-                        <div class="card">
-                            <div class="nav-item">
-                                <a href="#" alt="photo" class="nav-link">Home</a>
+        </div>
+        <hr>
+        <h2 class="text=uppercase">Navs = navigation menu</h2>
+        <div class="row g-3">
+            <div class="col-12">
+                <h2>tab-menu</h2>
+                <div class="nav nav-tabs">
+                    <div class="nav-item">
+                        <a href="#" alt="photo" class="nav-link active">active page</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#" alt="photo" class="nav-link">product</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#" alt="photo" class="nav-link disabled">shop trolley</a>
+                    </div>
+                </div>
+            </div>
+            <h2>column menu</h2>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="nav flex-column text-center">
+                            <div class="card">
+                                <div class="nav-item">
+                                    <a href="#" alt="photo" class="nav-link">Home</a>
+                                </div>
                             </div>
-                        </div>
-                        <br>
-                        <div class="card">
-                            <div class="nav-item">
-                                <a href="#" alt="photo" class="nav-link">Catalogue</a>
+                            <br>
+                            <div class="card">
+                                <div class="nav-item">
+                                    <a href="#" alt="photo" class="nav-link">Catalogue</a>
+                                </div>
                             </div>
-                        </div>
-                        <br>
-                        <div class="card">
-                            <div class="nav-item">
-                                <a href="#" alt="photo" class="nav-link disabled">FAQ page</a>
+                            <br>
+                            <div class="card">
+                                <div class="nav-item">
+                                    <a href="#" alt="photo" class="nav-link disabled">FAQ page</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-8">
-            <ul class="breadcrumb">
-                <li class="breadcrumb-item">
-                    <a href="#" alt="photo">computers</a>
-                </li>
-                <li class="breadcrumb-item">
-                    <a href="#" alt="photo">notebooks</a>
-                </li>
-                <li class="breadcrumb-item">
-                    MacBook
-                </li>
-            </ul>
-        </div>
-</main>
+            <div class="col-8">
+                <ul class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a href="#" alt="photo">computers</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        <a href="#" alt="photo">notebooks</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        MacBook
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                Іконка від Bootstrap:
+                <i class="bi bi-amd"></i>
+                <h1 class="text-warning"> <i class="bi bi-amd">H1 text</i></h1>
+                <button class="btn btn-success"> <i class="bi bi-amd"></i> Icon from Bootstrap</button>
+                <a href="#"><i class="bi bi-amd"></i>Link</a>
+            </div>
+    </main>
