--- a/src/container/shophome.hbs
+++ b/src/container/shophome.hbs
@@ -65,19 +65,7 @@
         <hr class="mt-5">
         {{>subscribe }}
         <hr>
-        {{#with service}}
-        <div class="card text-bg-success my-5">
-            <div class="card-body text-center">
-                <h2 class="card-title mb-3">{{title}}</h2>
-                <p class="card-text">{{description}}</p>
-                {{#each buttons}}
-                <div>
-                    <a href={{link}} class="btn btn-primary">{{text}}</a>
-                </div>
-                {{/each}}
-            </div>
-        </div>
-        {{/with}}
+        {{>service }}
     </div>
     <hr>
 </main>
